--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
     
     <!-- Titulo-->
     <div class="container-fluid">
-        <div class="bg-white">
-            <img src="img/logo_ipn.png" />
-            <img src="img/logo_escom.png" class="float-right">
-        </div>
         <div class="row align-items-start">
             <div class="col-md-2 bg-light sticky-top text-white mx-0 px-0">
+                <div>
+                    <img src="img/ipn.png" class="img-fluid"/>
+                </div>
+                <div>
+                    <img src="img/escom.png" class="img-fluid"/>
+                </div>
                 <div class="list-group">
                     <a href="#objetivo" class="list-group-item list-group-item-action">Objetivo</a>
                     <a href="#contenido" class="list-group-item list-group-item-action">Contenido</a>
