Additional update for mobile support

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Titulo-->
     <div class="container-fluid">
         <div class="row align-items-start">
-            <div class="col-md-2 sticky-top d-sm-none d-md-block bg-light text-white mx-0 px-0">
+            <div class="col-md-2 sticky-top d-none d-md-block bg-light text-white mx-0 px-0">
                 <div>
                     <img src="img/ipn.png" class="img-fluid"/>
                 </div>
