New mobile update

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                     </div>
                                     <div class="d-flex justify-content-center">
                                         <p>Figura 1. Obtenida de - <a
-                                                href="asdf.html">https://www.google.com.mx/images/branding/googlelogo/2x/googlelogo_color_160x56dp.png</a>
+                                                href="asdf.html">enlace</a>
                                         </p>
                                     </div>
 
