--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         <div class="card">
                             <div class="card-header" id="heading4">
                                 <h5 class="mb-0">
-                                    <button class="btn btn-link collapsed" data-toggle="collapse"
+                                    <button class="btn btn-link collapsed text-left" data-toggle="collapse"
                                         data-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
                                         2.4 Planes, programas, presupuestos y procedimientos
                                     </button>
